--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon & node-sass --watch scss -o css"
+    "start": "node app.js",
+    "dev": "nodemon & node-sass --watch scss -o css"
   },
   "author": "",
   "license": "ISC",
